Membuat header dan footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
 
+    <header>Disini adalah header</header>
+
     <h1>HELLO WORLD</h1>
 
-    <div>Hello i am Pastha</div>
-    
+    <div>Hello i am pastha</div>
+
+    <footer>Disini adalah footer</footer>
 </body>
 </html>
