--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,8 @@
 
     <div>Ini adalah halaman contact berisi form dan map..</div>
 
+    <form action=""></form>
+
     <footer>Disini adalah footer</footer>
 </body>
 </html>
